# attested-signing-ceremony

./: .gitignore  .zenodo.json  ARTIFACT.md  CITATION.cff  Cargo.toml  LICENSE  README.md
examples/: attestation-anchor.txt  attestation-anchor.txt.ots
scripts/: run_demo.sh
src/: broadcast.rs  ceremony.rs  main.rs  opreturn.rs  scitt.rs  tpm.rs
